# hirami

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  prometheus.yml
crates/beacon/: Cargo.toml
crates/beacon/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/db/: Cargo.toml
crates/db/migrations/: 001_initial_schema.sql
crates/db/src/: lib.rs  migrations.rs  models.rs  pool.rs
crates/ingestion/: Cargo.toml
crates/ingestion/src/: block_processor.rs  lib.rs  rpc_client.rs  validator_tagger.rs
crates/mev-heuristics/: Cargo.toml
crates/mev-heuristics/src/: analyzer.rs  detectors.rs  lib.rs
crates/telemetry/: Cargo.toml
crates/telemetry/src/: audit.rs  lib.rs  logging.rs  metrics.rs
data/: .gitkeep
examples/: africa_validators_example.csv
tests/: integration_test.rs
