[package]
name = "mev-africa-db"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
sqlx = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
hex = { workspace = true }
rust_decimal = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }



