[package]
name = "mev-africa-ingestion"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
alloy = { workspace = true }
alloy-rpc-types = { workspace = true }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
mev-africa-db = { path = "../db" }
mev-africa-heuristics = { path = "../mev-heuristics" }
mev-africa-telemetry = { path = "../telemetry" }
mev-africa-beacon = { path = "../beacon" }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
hex = { workspace = true }
rust_decimal = { workspace = true }
sqlx = { workspace = true }

