[package]
name = "mev-africa-heuristics"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
alloy = { workspace = true }
alloy-rpc-types = { workspace = true }
mev-africa-db = { path = "../db" }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
rust_decimal = { workspace = true }
anyhow = { workspace = true }



